Akteneinsichten werden angezeigt

--- a/jupo-webui/index.html
+++ b/jupo-webui/index.html
@@ -15,8 +15,8 @@
           alert(hinweisBrowser)
     </script>
 	<link rel="preload" href="./assets/css/color-scheme.css" as="style" />
-	<link rel="preload" href="/assets/config.json" as="fetch">
-	<link rel="preload" href="/assets/operator-config.json" as="fetch">
+	<link rel="preload" href="/assets/config.json" as="fetch" crossorigin="anonymous">
+	<link rel="preload" href="/assets/operator-config.json" as="fetch" crossorigin="anonymous">
   </head>
   <body>
     <div id="app"></div>
