prod build klappt noch nicht

--- a/jupo-webui/index.html
+++ b/jupo-webui/index.html
@@ -21,6 +21,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-	<link rel="stylesheet" href="./assets/css/color-scheme.css">
+	<!--<link rel="stylesheet" href="./assets/css/color-scheme.css">-->
   </body>
 </html>
