--- a/jupo-webui/index.html
+++ b/jupo-webui/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
 	<!--<link rel="stylesheet" href="./assets/css/color-scheme.css">-->
   </body>
 </html>
