script setup tags miniert

--- a/jupo-webui/index.html
+++ b/jupo-webui/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/assets/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>Vital App</title>
+    <title>Justizportal Vue App</title>
 	<script>
       var hinweisBrowser = 'Sicherheitswarnung: Sie benutzen den Internet-Explorer, dieser wird als "Nicht sicher" eingestuft!'
       if (window.navigator.userAgent.indexOf("Trident/") > -1 ||
