Anzeige zeigt aktuellen Aktennamen, assets aufgeräumt

--- a/jupo-webui/index.html
+++ b/jupo-webui/index.html
@@ -22,6 +22,7 @@
 	<script src="/web/pdf_viewer.js"></script>-->
   </head>
   <body>
+	<script>document.head.innerHTML += '<link rel="stylesheet" href="./assets/css/color-scheme.css">'</script>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
 	<!--<link rel="stylesheet" href="./assets/css/color-scheme.css">-->
