Hinzufügen der Lizenvermerke in den Dateien

--- a/jupo-webui/index.html
+++ b/jupo-webui/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <!-- Copyright 2019 Oberverwaltungsgericht Rheinland-Pfalz, lizenziert unter der EUPL-1.2 -->
+    <!-- Copyright 2019 Oberverwaltungsgericht Rheinland-Pfalz, Reiner Bamberger, lizenziert unter der EUPL-1.2 -->
 	<!-- A list of the third-party software used and their licenses can be found under "/3rdpartylicenses.txt" -->
     <link rel="icon" href="/assets/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
